Fixed horizontal scrollbar nub on popboxes under AIR 2.5

--- a/themes/Leopaz/theme.css
+++ b/themes/Leopaz/theme.css
@@ -2118,33 +2118,34 @@ body:not(.active) ::-webkit-scrollbar-thumb:vertical{
   border-radius:4px;
     -webkit-border-radius:4px;
 }
-div.popbox-content{
-  overflow:auto;
-  max-height:380px;
-  background:-webkit-gradient(
+div.popbox-content {
+  overflow: auto;
+  overflow-x: hidden;
+  max-height: 380px;
+  background: -webkit-gradient(
     linear, left top, left bottom,
     from(rgba(117, 117, 117, 0.95)), to(rgb(38, 38, 38)),
     color-stop(0.5, rgba(49, 49, 49, 0.95)),
     color-stop(0.5, rgba(33, 33, 33, 0.95))
     ) no-repeat;
-  background-size:100% 40px;
-    -webkit-background-size:100% 40px;
-  border:1px solid rgba(38, 38, 38, 0.95);
-  border-top-left-radius:7px;
-    -webkit-border-top-left-radius:7px;
-  border-top-right-radius:7px;
-    -webkit-border-top-right-radius:7px;
-  border-bottom-left-radius:4px;
-    -webkit-border-bottom-left-radius:4px;
-  border-bottom-right-radius:4px;
-    -webkit-border-bottom-right-radius:4px;
+  background-size:            100% 40px;
+    -webkit-background-size:  100% 40px;
+  border: 1px solid rgba(38, 38, 38, 0.95);
+  border-top-left-radius:               7px;
+    -webkit-border-top-left-radius:     7px;
+  border-top-right-radius:              7px;
+    -webkit-border-top-right-radius:    7px;
+  border-bottom-left-radius:            4px;
+    -webkit-border-bottom-left-radius:  4px;
+  border-bottom-right-radius:           4px;
+    -webkit-border-bottom-right-radius: 4px;
 }
 div#popbox-content-account-details,
-div#popbox-content-profile{
-  border-bottom-left-radius:7px;
-    -webkit-border-bottom-left-radius:7px;
-  border-bottom-right-radius:7px;
-    -webkit-border-bottom-right-radius:7px;
+div#popbox-content-profile {
+  border-bottom-left-radius:            7px;
+    -webkit-border-bottom-left-radius:  7px;
+  border-bottom-right-radius:           7px;
+    -webkit-border-bottom-right-radius: 7px;
 }
 div.popbox-content h1{
   background:transparent;
